added course html page

--- a/sections/homepage/others/other.scss
+++ b/sections/homepage/others/other.scss
@@ -14,6 +14,27 @@
   overflow-x: scroll;
   width: calc(100% + 2rem);
   transform: translateX(-1rem);
+
+  /* width */
+  &::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+  }
+
+  /* Track */
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    background: transparent;
+  }
+
+  /* Handle on hover */
+  &::-webkit-scrollbar-thumb:hover {
+    background: transparent;
+  }
 }
 
 .others_swiper_wrapper{
