--- a/sections/homepage/categories/categories.scss
+++ b/sections/homepage/categories/categories.scss
@@ -1,67 +1,66 @@
-
-.hero {
-  width: 100%;
+.categories{
+  margin: 3rem 0;
+  //border: 1px solid red;
+  padding: 1rem;
 }
 
-.hero .title{
-  color: red;
-  text-align: center;
+.categories_slider_container{
+  width: calc(100% + 4rem);
+  transform: translateX(-2rem);
+
+  //border: 1px solid red;
+  padding: 2rem 1rem;
+  overflow-x: scroll;
+
+  /* width */
+  &::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+  }
+
+  /* Track */
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    background: transparent;
+  }
+
+  /* Handle on hover */
+  &::-webkit-scrollbar-thumb:hover {
+    background: transparent;
+  }
 }
 
-
-.hero-swiper {
-
-}
-
-.hero-swiper-slide {
-  width: 100%;
-
-  text-align: center;
-  /*font-size: 18px;*/
-  //background: blanchedalmond;
+.categories_slider{
   display: flex;
-  justify-content: center;
-  align-items: center;
-
-  //border: 1px solid red;
+  gap: 1.2rem;
+  //align-items: center;
 }
 
+.categories_card{
+  display: flex;
+  flex-flow: column;
+  flex-shrink: 0;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.16);
+  border-radius: .6rem;
+  overflow: hidden;
 
-.hero_swiper_item{
-  position: relative;
-  height: 100%;
-  width: 100%;
+  img{
+    object-fit: cover;
+    //width: 100%;
+    width: 17vmax;
+    max-height: 17vmax;
+  }
 
-  /*border: 5px solid yellow;*/
-}
+  .text{
+    padding: 1rem 1rem 2rem;
 
-.hero_swiper_item::after{
-  content: '';
-  position: absolute;
-  display: block;
-  inset: 0;
-  background: linear-gradient(0deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0) 100%);
-}
-
-.hero_swiper_item img{
-  object-fit: cover;
-  max-width: 100%;
-  width: 100%;
-  grid-column: span 2;
-  height: 60vmax;
-}
-
-.hero_swiper_item .text{
-  position: absolute;
-  width: 100%;
-  bottom: 3rem;
-  color: white;
-  z-index: 2;
-
-  //border: 1px solid red;
-}
-
-
-.hero-swiper .swiper-scrollbar-drag{
-  background-color: red;
+    p{
+      font-size: 1.3rem;
+      margin-top: 0;
+    }
+  }
 }
