--- a/sections/recommended/recommended.scss
+++ b/sections/recommended/recommended.scss
@@ -2,19 +2,28 @@
   //border: 1px solid red;
 }
 
-nav{
+.recommended_nav{
   display: flex;
+  align-items: center;
   justify-content: space-between;
 
-  p{
+  h1{
     margin: 0 auto;
+  }
+
+  button{
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    border: none;
+    transform: scale(1.5);
   }
 }
 
 .recommended_list{
   list-style: none;
   padding-left: 0;
-  margin-top: 2rem;
+  margin-top: 5rem;
   display: flex;
   flex-flow: column;
   gap: 3rem;
@@ -25,6 +34,9 @@ nav{
   display: flex;
   align-items: center;
   gap: 1rem;
+  height: 13vmax;
+
+  //border: 1px solid red;
 
   &:not(:first-child){
     &::before{
@@ -42,18 +54,27 @@ nav{
   img{
     max-width: 17vmax;
     width: 100%;
-    height: 10vmax;
+    //height: 10vmax;
+    height: 100%;
     object-fit: cover;
     border-radius: .5rem;
+
+    //border: 1px solid red;
+
   }
 
   .text{
 
     .title{
       margin-top: 0;
+      hyphens: auto;
+      white-space: break-spaces;
     }
+
     span{
       color: darkgray;
+      margin-bottom: .5rem;
+      display: block;
     }
   }
 }
